# nginx-flask-plotly

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  pyproject.toml
application/: main.py
application/api/: __init__.py  error_handlers.py  main_dash.py  main_flask.py
application/api/dash_apps/: default_dash_app.py  elements.py
application/api/routes/: __init__.py  home.py
application/config/: __init__.py  flask_config.py
application/connections/: __init__.py  clients.py  sync_api_client.py
application/templates/core/: base.jinja2  dash.jinja2  empty_template.jinja2
application/templates/core/errors/: 403.jinja2  404.jinja2
application/templates/home/: index.jinja2
application/templates/partials/: footer.jinja2  header.jinja2  offcanvas.jinja2
application/templates/partials/css/: imports.jinja2
application/utils/: __init__.py  custom_dash.py  custom_request.py
nginx/: Dockerfile  default.conf  nginx.conf  start.sh
static/: README.md  typography.css
static/css/: base_styles.css  bg_border_text_font_style.css  dash.css  forms.css  spinner.css  style.css  tables.css  widths_heights.css
static/js/: dark_light_mode_switch.js
templates/core/: base.jinja2  dash.jinja2
templates/core/errors/: 500.jinja2
templates/home/: index.jinja2
templates/partials/: alerts.jinja2  footer.jinja2  header.jinja2  offcanvas.jinja2  theme_switcher.jinja2
templates/partials/css/: imports.jinja2
templates/partials/js/: imports.jinja2
templates/shared/macros/: form_field.jinja2  format_date_ymd.jinja2
(+2 files in other folders)
