[project]
name = "application"
version = "0.0.0"
requires-python = ">=3.12"
description = "Boilerplate za aplikacijo v Flasku in Dashu. Copyright @ 2025, Matej Mencin."
dependencies = [
    "dash>=2.9.3",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=1.7.1",
    "dash-mantine-components>=1.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "jinja-partials>=0.2.1",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "setuptools>=77.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]
